Fix ma non funziona lo stesso

--- a/prove/css/electromagneticSpectrum.css
+++ b/prove/css/electromagneticSpectrum.css
@@ -654,3 +654,9 @@ body{
     text-align: center;
     visibility: hidden;
 }
+
+#selected-color
+{
+    text-align: center;
+    visibility: hidden;
+}
