--- a/prove/css/electromagneticSpectrum.css
+++ b/prove/css/electromagneticSpectrum.css
@@ -531,7 +531,8 @@ table{
 	box-shadow: inset 0 0 0.5em 0 rgba(235, 97, 143, 1), 0 0 0.5em 0 rgba(235, 97, 143, 1);
 	position: relative;
     margin: 5%;
-    margin-left: 41%;
+    margin-left: 41vw;
+  
 }
 
 
@@ -588,13 +589,15 @@ table{
     margin-bottom: 5%;
     font-size: 120%;
     color: white;
+    background-color: rgba(235, 97, 143, 1);
+
 }
 .istruzioni{
     color: white;
 }
 body{
-    color: black;
-    background-color: black;
+    color: rgb(0, 0, 0);
+    background-color: white;
     font-family: 'Ubuntu', sans-serif;
 }
 .neonText {
