Add background color to electromagnetic spectrum grid in CSS and update Italian translation for main header in HTML

--- a/prove/css/electromagneticSpectrum.css
+++ b/prove/css/electromagneticSpectrum.css
@@ -140,6 +140,7 @@ h3{
     grid-gap: 3px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
+    background-color: #f5f5f7;
 }
 
 .photonViewContainer {
