--- a/prove/css/custom.css
+++ b/prove/css/custom.css
@@ -1,3 +1,12 @@
+h1 {
+  /* background-color:green; */
+  grid-column: 1/-1;
+}
+
+h3 {
+  margin: 0;
+}
+
 .file-selector {
   position: relative;
   display: inline-block;
@@ -66,4 +75,185 @@
 
 .topTesto {
   height: 100vh;
+}
+
+
+table {
+  width: 70%;
+  margin-left: 15%;
+  margin-bottom: 10%;
+}
+
+.button {
+  font-size: 2em;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: rgba(235, 97, 143, 1);
+  border: rgba(235, 97, 143, 1) 4px solid;
+  padding: 0.25em 1em;
+  border-radius: 0.25em;
+  text-shadow: 0 0 0.125em rgba(255, 255, 255, 0.55), 0 0 0.5em currentColor;
+  box-shadow: inset 0 0 0.5em 0 rgba(235, 97, 143, 1), 0 0 0.5em 0 rgba(235, 97, 143, 1);
+  position: relative;
+  margin: 5%;
+  margin-left: 41vw;
+
+}
+
+
+.button::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background: rgba(235, 97, 143, 1);
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: perspective(1.2em) rotateX(40deg) scale(1.5, 0.5);
+  filter: blur(1.15em);
+  opacity: 0.7;
+  transition: transform 0.5s linear;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 4em 0.6em rgba(235, 97, 143, 1), 0 0 1em 0.2em rgba(255, 255, 255, 1);
+  opacity: 0;
+  background: rgba(235, 97, 143, 1);
+  z-index: -1;
+  transition: opacity 0.5s linear;
+}
+
+.button:hover,
+.button:focus {
+  color: rgba(1, 1, 1, 1);
+  ;
+  text-shadow: none;
+}
+
+.button:hover::before,
+.button:focus::before {
+  opacity: 1;
+  transform: perspective(1em) rotateX(40deg) scale(1.5, 0.6);
+  transition: transform 0.5s linear;
+}
+
+.button:hover::after,
+.button:focus::after {
+  opacity: 1;
+}
+
+.bottoneFile {
+  width: 20%;
+  margin-left: 40%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-size: 120%;
+  color: white;
+  background-color: rgba(235, 97, 143, 1);
+
+}
+
+.istruzioni {
+  color: white;
+}
+
+body {
+  color: rgb(0, 0, 0);
+  background-color: white;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.neonText {
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px rgba(235, 97, 143, 1),
+    0 0 82px rgba(235, 97, 143, 1),
+    0 0 92px rgba(235, 97, 143, 1),
+    0 0 102px rgba(235, 97, 143, 1),
+    0 0 151px rgba(235, 97, 143, 1);
+}
+
+.special {
+  font-size: 4.2rem;
+  animation: flicker 1.5s infinite alternate;
+}
+
+/* Flickering animation */
+@keyframes flicker {
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+
+    text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px rgba(235, 97, 143, 1),
+      0 0 80px rgba(235, 97, 143, 1),
+      0 0 90px rgba(235, 97, 143, 1),
+      0 0 100px rgba(235, 97, 143, 1),
+      0 0 150px rgba(235, 97, 143, 1);
+
+  }
+
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+  }
+}
+
+
+/* Additional styling */
+
+.special {
+  font-size: 1.8rem;
+}
+
+.container {
+  margin-top: 20vh;
+}
+
+
+.special {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.color-cell {
+  text-align: center;
+  visibility: hidden;
+}
+
+#selected-color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  height: 100px;
+}
+
+#hovered-color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  height: 100px;
 }
