--- a/css/custom.css
+++ b/css/custom.css
@@ -8,7 +8,7 @@ ul {
 
 .starting_page {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -23,11 +23,11 @@ h1 {
 }
 
 html {
-  
-  font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  scroll-behavior: smooth;
 }
 
 body {
+  font-family: "San Francisco", sans-serif;
   overflow-x: hidden;
 }
 
@@ -37,7 +37,6 @@ body {
   left: 50%;
   transform: translateX(-50%);
   font-size: 2rem;
-  
 }
 
 section {
@@ -49,4 +48,9 @@ section {
   align-items: center;
   flex-direction: column;
   position: relative;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
