--- a/nuovo/css/custom.css
+++ b/nuovo/css/custom.css
@@ -11,8 +11,8 @@ ul {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
   margin-top: -100px;
 }
 
@@ -24,14 +24,16 @@ h1 {
 
 html {
   scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
 }
 
 body {
+  
   font-family: "San Francisco", sans-serif;
   overflow-x: hidden;
 }
 
-#arrow {
+.arrow {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -40,7 +42,6 @@ body {
 }
 
 section {
-  top: 100vh;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -48,9 +49,69 @@ section {
   align-items: center;
   flex-direction: column;
   position: relative;
+  scroll-snap-align: start;
 }
 
 a {
   text-decoration: none;
   color: #000;
+}
+
+
+.drop-container {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px dashed #555;
+  color: #444;
+  cursor: pointer;
+  transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.drop-container:hover {
+  background: #eee;
+  border-color: #111;
+}
+
+.drop-container:hover .drop-title {
+  color: #222;
+}
+
+.drop-title {
+  color: #444;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  transition: color .2s ease-in-out;
+}
+
+input[type=file] {
+  width: 350px;
+  max-width: 100%;
+  color: #444;
+  padding: 5px;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid #555;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #084cdf;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: #0d45a5;
 }
