--- a/css/custom.css
+++ b/css/custom.css
@@ -181,3 +181,11 @@ img {
   border-radius: 14px;
   background-color: #fff;
 }
+
+#canvas {
+  max-width: 40vw;
+  max-height: 40vh;
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
