--- a/css/custom.scss
+++ b/css/custom.scss
@@ -86,7 +86,6 @@ a {
   text-align: center;
   transition: color 0.2s ease-in-out;
 }
-
 .filePicker {
   width: 0.1px;
   height: 0.1px;
@@ -95,13 +94,19 @@ a {
   position: absolute;
   z-index: -1;
 }
-
 .filePicker + label {
   font-size: 1.25rem;
   border-radius: 5px;
   font-weight: 700;
   color: #57514a;
-  background: linear-gradient(-45deg, #ff004c, #ffbb00, #a2e258, #58d2e2, #3379b3);
+  background: linear-gradient(
+    -45deg,
+    #ff004c,
+    #ffbb00,
+    #a2e258,
+    #58d2e2,
+    #3379b3
+  );
   padding: 0.5em 3em 0.5em 3em;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
@@ -114,11 +119,9 @@ a {
 .immagine {
   color: #ff004c;
 }
-
 .colore {
   color: #a2e258;
 }
-
 .frequenza {
   color: #338eb3;
 }
@@ -130,7 +133,16 @@ a {
 }
 
 #color-hue {
-  background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+  background-image: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet
+  );
   width: 45vw;
   height: 8vh;
 }
@@ -179,10 +191,9 @@ a {
   margin-top: 77px;
   margin-bottom: 25px;
 }
-
 .result-box {
   width: 0;
   padding: 80px;
   border-radius: 14px;
   background-color: #fff;
-}/*# sourceMappingURL=custom.css.map */
+}
