--- a/nuovo/css/custom.css
+++ b/nuovo/css/custom.css
@@ -173,13 +173,13 @@ a {
 }
 
 .canvas {
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-  min-height: 100%;
+  width: 60vw;
+  height: 60vh;
+  max-width: 60vw;
+  max-height: 60vh;
   display: block;
   margin: 0 auto;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 .result-text {
